--- a/.gitlab/build.yml
+++ b/.gitlab/build.yml
@@ -1,65 +1,122 @@
 ---
+.build_script_linux:
+  stage: build
+  tags: ["docker", "large"]
+  extends: .only-master-mr
+  script:
+    - bash .gitlab/build.sh | tee ${LOGNAME}.log
+  artifacts:
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+    expire_in: 180 minutes
+    untracked: true
+    when: always
+
 build_hmat:
-  extends: .build_script_template
+  extends: .build_script_linux
   variables:
-    BUILD_OPTIONS: "-DCHAMELEON_USE_CUDA=OFF -DCHAMELEON_USE_MPI=ON -DCHAMELEON_USE_HMAT=ON"
+    SYSTEM: linux
     VERSION: hmat
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
+    BUILD_OPTIONS: "-DCHAMELEON_USE_CUDA=OFF -DCHAMELEON_USE_MPI=ON -DCHAMELEON_USE_HMAT=ON"
 
 build_openmp:
-  extends: .build_script_template
+  extends: .build_script_linux
   variables:
-    BUILD_OPTIONS: "-DCHAMELEON_SCHED=OPENMP"
+    SYSTEM: linux
     VERSION: openmp
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
+    BUILD_OPTIONS: "-DCHAMELEON_SCHED=OPENMP"
+
 
 build_parsec:
-  extends: .build_script_template
+  extends: .build_script_linux
   variables:
-    BUILD_OPTIONS: "-DCHAMELEON_SCHED=PARSEC"
+    SYSTEM: linux
     VERSION: parsec
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
+    BUILD_OPTIONS: "-DCHAMELEON_SCHED=PARSEC"
 
 build_quark:
-  extends: .build_script_template
+  extends: .build_script_linux
   variables:
-    BUILD_OPTIONS: "-DCHAMELEON_SCHED=QUARK"
+    SYSTEM: linux
     VERSION: quark
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
+    BUILD_OPTIONS: "-DCHAMELEON_SCHED=QUARK"
 
 build_starpu:
-  extends: .build_script_template
+  extends: .build_script_linux
   variables:
-    BUILD_OPTIONS: "-DCHAMELEON_USE_CUDA=ON -DCHAMELEON_USE_MPI=ON"
+    SYSTEM: linux
     VERSION: starpu
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
+    BUILD_OPTIONS: "-DCHAMELEON_USE_CUDA=ON -DCHAMELEON_USE_MPI=ON"
 
 build_starpu_hip:
-  extends: .build_script_template
+  extends: .build_script_linux
   variables:
+    SYSTEM: linux
+    VERSION: starpu_hip
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
     CHAM_CI_ENV_ARG: hip
     BUILD_OPTIONS: "-DCHAMELEON_USE_HIP_ROC=ON -DCHAMELEON_USE_MPI=ON"
-    VERSION: starpu_hip
 
 build_starpu_hipcuda:
-  extends: .build_script_template
+  extends: .build_script_linux
   variables:
+    SYSTEM: linux
+    VERSION: starpu_hipcuda
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
     CHAM_CI_ENV_ARG: hipcuda
     BUILD_OPTIONS: "-DCHAMELEON_USE_HIP_CUDA=ON -DCHAMELEON_HIPBLAS_PATH=/home/gitlab/hipcuda/hipblas -DCHAMELEON_USE_MPI=ON"
-    VERSION: starpu_hipcuda
 
 build_starpu_simgrid:
-  extends: .build_script_template
+  extends: .build_script_linux
   variables:
+    SYSTEM: linux
+    VERSION: starpu_simgrid
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
     CHAM_CI_ENV_ARG: simgrid
     BUILD_OPTIONS: "-DCHAMELEON_SIMULATION=ON -DCHAMELEON_USE_CUDA=ON -DCHAMELEON_USE_MPI=OFF"
-    VERSION: starpu_simgrid
 
-# build_starpu_macosx:
-#   extends: .only-merge-request
-#   stage: build
-#   tags: ['macosx']
-#   variables:
-#     VERSION: starpu
-#   script:
-#     - tools/build_macosx.sh
-#   artifacts:
-#     name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
-#     expire_in: 2 days
-#     untracked: true
-#     when: always
+build_starpu_macosx:
+  extends: .only-master-mr
+  stage: build
+  tags: ['macosx']
+  variables:
+    SYSTEM: macosx
+    VERSION: starpu
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
+  script:
+    - bash .gitlab/build.sh | tee ${LOGNAME}.log
+  artifacts:
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+    expire_in: 180 minutes
+    paths:
+      - ${LOGNAME}.log
+  cache:
+    key: "${SYSTEM}-${VERSION}-$CI_COMMIT_REF_SLUG"
+    untracked: true
+    policy: push
+
+.build_starpu_windows:
+  extends: .only-master-mr
+  stage: build
+  tags: ['windows']
+  variables:
+    SYSTEM: windows
+    CHERE_INVOKING: "yes"
+    MSYSTEM: UCRT64
+    VERSION: starpu
+    LOGNAME: "chameleon-build-${SYSTEM}-${VERSION}"
+  script:
+    - bash -lc .gitlab/build.sh | tee "$env:LOGNAME.log"
+  artifacts:
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+    expire_in: 180 minutes
+    paths:
+      - ${LOGNAME}.log
+  cache:
+    key: "${SYSTEM}-${VERSION}-$CI_COMMIT_REF_SLUG"
+    untracked: true
+    policy: push
