--- a/.gitlab/coverage.yml
+++ b/.gitlab/coverage.yml
@@ -5,19 +5,34 @@
 # Rk: We do not take into account the simgrid lcov file for now, as it is empty with new testings
 #
 ---
-coverage:
-  extends: .only-merge-request
-  interruptible: true
-  stage: analyse
+.coverage:
+  stage: coverage
   script:
     - tools/coverage.sh
   coverage: /^\s*lines......:\s*\d+.\d+\%/
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
-    expire_in: 2 days
-    untracked: true
+    expire_in: 180 minutes
+    paths:
+      - chameleon-*.lcov
+      - chameleon.lcov
+      - chameleon_coverage.xml
+      - coverage/
     when: always
     reports:
       coverage_report:
         coverage_format: cobertura
-        path: coverage.xml
+        path: chameleon_coverage.xml
+
+coverage_master:
+  extends:
+    - .coverage
+    - .only-master
+  needs: [test_openmp_master,test_parsec_master,test_quark_master,test_starpu_master,test_starpu_simgrid_simu_all]
+
+coverage_mr:
+  extends: .coverage
+  interruptible: true
+  rules:
+    - if: ($CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME !~ /^notest-.*$/)
+  needs: [test_openmp_mr,test_parsec_mr,test_quark_mr,test_starpu_mr,test_starpu_simgrid_simu_all]
