--- a/.gitlab/pages.yml
+++ b/.gitlab/pages.yml
@@ -2,7 +2,7 @@
 pages:
   stage: deploy
   extends: .only-master
-  dependencies: [coverage]
+  needs: [coverage_master]
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
     expire_in: 1 week
