--- a/.gitlab/test_parsec.yml
+++ b/.gitlab/test_parsec.yml
@@ -1,79 +1,27 @@
 ---
-.test_parsec_template: &test_parsec
-  extends: .test_script_template
+.test_parsec:
+  extends: .test_script_linux
   needs: [build_parsec]
-  dependencies: [build_parsec]
-
-.test_parsec_template_master: &test_parsec_master
-  extends:
-    - .test_parsec_template
-    - .only-master
-
-.test_parsec_template_branches: &test_parsec_branches
-  extends:
-    - .test_parsec_template
-    - .only-merge-request
-
-test_parsec_shm_s:
-  <<: *test_parsec_master
+  interruptible: true
   variables:
+    SYSTEM: linux
     VERSION: parsec
     CATEGORY: shm
-    PRECISION: s
-    TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
+    LOGNAME: "chameleon-test-${SYSTEM}-${VERSION}-${CATEGORY}-${PRECISION}"
+    TESTS_RESTRICTION: "-R _${CATEGORY}_${PRECISION}"
 
-test_parsec_shm_d:
-  <<: *test_parsec_master
-  variables:
-    VERSION: parsec
-    CATEGORY: shm
-    PRECISION: d
-    TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
+test_parsec_master:
+  extends: .test_parsec
+  rules:
+    - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH =~ /^ci-.*$/) && $CI_PIPELINE_SOURCE != "schedule"
+  parallel:
+    matrix:
+      - PRECISION: [s, d, c, z]
 
-test_parsec_shm_c:
-  <<: *test_parsec_branches
-  variables:
-    VERSION: parsec
-    CATEGORY: shm
-    PRECISION: c
-    TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
-
-test_parsec_shm_z:
-  <<: *test_parsec_master
-  variables:
-    VERSION: parsec
-    CATEGORY: shm
-    PRECISION: z
-    TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
-
-# test_parsec_mpi_s:
-#   <<: *test_parsec_branches
-#   variables:
-#     VERSION: parsec
-#     CATEGORY: mpi
-#     PRECISION: s
-#     TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
-
-# test_parsec_mpi_d:
-#   <<: *test_parsec_master
-#   variables:
-#     VERSION: parsec
-#     CATEGORY: mpi
-#     PRECISION: d
-#     TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
-
-# test_parsec_mpi_c:
-#   <<: *test_parsec_master
-#   variables:
-#     VERSION: parsec
-#     CATEGORY: mpi
-#     PRECISION: c
-#     TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
-
-# test_parsec_mpi_z:
-#   <<: *test_parsec_master
-#   variables:
-#     VERSION: parsec
-#     CATEGORY: mpi
-#     PRECISION: z
-#     TESTS_RESTRICTION: "-R \"_${CATEGORY}_${PRECISION}\""
+test_parsec_mr:
+  extends: .test_parsec
+  rules:
+    - if: ($CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME !~ /^notest-.*$/)
+  parallel:
+    matrix:
+      - PRECISION: [c]
