preliminary ci job should only be performed during merge requests

--- a/.gitlab/preliminary.yml
+++ b/.gitlab/preliminary.yml
@@ -4,10 +4,7 @@
 ---
 preliminary_checks:
   stage: pre
-  interruptible: true
-  rules:
-    - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH =~ /^ci-.*$/) && $CI_PIPELINE_SOURCE != "schedule"
-    - if: ($CI_PIPELINE_SOURCE == "merge_request_event")
+  extends: .only-mr
   parallel:
     matrix:
       - TEST: [rebase, draft, header]
