--- a/.gitlab/preliminary.yml
+++ b/.gitlab/preliminary.yml
@@ -4,7 +4,9 @@
 ---
 preliminary_checks:
   stage: pre
-  extends: .only-mr
+  interruptible: true
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
   parallel:
     matrix:
       - TEST: [rebase, draft, header]
