cmake: if chameleon depends on coreblas interface, then coreblas interface must always be built

--- a/compute/CMakeLists.txt
+++ b/compute/CMakeLists.txt
@@ -341,6 +341,9 @@ elseif(CHAMELEON_SCHED_OPENMP)
 endif()
 if (CHAMELEON_SIMULATION)
   target_include_directories(chameleon PUBLIC $<BUILD_INTERFACE:${CHAMELEON_SOURCE_DIR}/coreblas/include>)
+  add_dependencies(chameleon
+    coreblas_include
+  )
 else()
   target_link_libraries(chameleon PUBLIC coreblas)
 endif()
