Added _starpu_mpi_redux_wrapup_data detection so that automatic MPI reduction can be used for partial pivoting (see also RUNTIME_ipiv_reducek).

--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -140,6 +140,10 @@ if ( STARPU_FOUND )
     if ( HAVE_STARPU_MPI_REDUX )
       message("-- ${Blue}Add definition HAVE_STARPU_MPI_REDUX${ColourReset}")
     endif()
+    check_function_exists(_starpu_mpi_redux_wrapup_data HAVE_STARPU_MPI_REDUX_WRAPUP)
+    if ( HAVE_STARPU_MPI_REDUX_WRAPUP )
+      message("-- ${Blue}Add definition HAVE_STARPU_MPI_REDUX_WRAPUP${ColourReset}")
+    endif()
     check_function_exists(starpu_mpi_data_cpy_priority HAVE_STARPU_MPI_DATA_CPY_PRIORITY)
     if ( HAVE_STARPU_MPI_DATA_CPY_PRIORITY )
       message("-- ${Blue}Add definition HAVE_STARPU_MPI_DATA_CPY_PRIORITY${ColourReset}")
