--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -51,6 +51,7 @@
 #cmakedefine HAVE_STARPU_MPI_INTERFACE_DATATYPE_NODE_REGISTER
 #cmakedefine HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER
 #cmakedefine HAVE_STARPU_MPI_REDUX
+#cmakedefine HAVE_STARPU_MPI_REDUX_WRAPUP
 #cmakedefine HAVE_STARPU_MPI_DATA_CPY_PRIORITY
 
 #if (!defined(HAVE_STARPU_MPI_INTERFACE_DATATYPE_NODE_REGISTER) && !defined(HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER)) && defined(CHAMELEON_USE_MPI_DATATYPES)
